--- a/Website/Contact/contact-page.html
+++ b/Website/Contact/contact-page.html
@@ -40,9 +40,9 @@
 
             <div class="contact-info">
                 <h3>Contact Information</h3>
-                <p><strong>Business Hours:</strong> Monday - Friday, 9:00 AM - 5:00 PM</p>
-                <p><strong>Expected Response Time:</strong> Within 24 hours</p>
-                <p><strong>Address:</strong> 123 Example St., Example City</p>
+                <p><strong>Business Hours:</strong> Monday - Friday, 8:00 AM - 5:00 PM</p>
+                <p><strong>Expected Response Time:</strong> Within 48 hours</p>
+                <p><strong>Address:</strong> 103 Svishtovska St., Gabrovo </p>
             </div>
         </section>
     </main>
