--- a/Website/Card/card-page.html
+++ b/Website/Card/card-page.html
@@ -20,6 +20,7 @@
             <a href="https://en.wikipedia.org/wiki/Facebook" target="_blank"> Facebook </a>
             <a href="https://en.wikipedia.org/wiki/Twitter" target="_blank"> X -Twitter </a>
             <a href="https://en.wikipedia.org/wiki/GitHub" target="_blank"> GitHub </a>
+            <button onclick="window.print()"> PRINT </button>
         </div>
     </div>
 
